# Route-building

./: .env  .env.sample  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
static/css/: styles.css
static/js/: map.js
stations/: admin.py  forms.py  models.py  serializers.py  test.py  urls.py  utils.py  views.py
stations/management/commands/: fill_database.py  get_elevation.py  upload_table.py
stations/migrations/: 0001_initial.py  0002_initial.py  0003_route_name.py  0004_gasstation_elevation_alter_route_name.py
stations/templates/stations/: base.html  route_confirm_delete.html  route_create.html  route_detail.html  route_form.html  route_list.html  route_view.html
users/: authentication.py  forms.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_token.py
users/templates/users/: login.html  new_pass_generate.html  register.html  reset_password.html  set_new_password.html  user_form.html
