[tool.poetry]
name = "tf4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
requests = "^2.32.3"
social-auth-app-django = "^5.4.1"
django-extensions = "^3.2.3"
pandas = "^2.2.2"
xlrd = "^2.0.1"
folium = "^0.17.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
